tests/conformance/syntax/negative/arrow_malformed_invalid.ditt
module Syntax.ArrowFormsBad where

postulate C : Cat
postulate D : Cat
f_bad : C -> -> D = \x. x
